# rig-semantic-router

./: Cargo.toml  readme.md
src/: lib.rs  main.rs  router.rs  topic.rs
