[package]
name = "rig-semantic-router"
version = "0.1.0"
edition = "2024"

[dependencies]
qdrant-client = "1.12.1"
rig-core = "0.6.1"
rig-qdrant = "0.1.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.0", features = ["v4"] }
